src/App.css
:root {
  --background: #f5f5fd;
  --card: #ca634e;
  --white: #fffdfd;
}

.App {
  background-color: var(--background);
}

.heading {
  padding: 8rem 4rem;
  max-width: 1200px;
  margin: auto;
}

.title {
  text-align: right;
  margin-top: 8rem;
}

.display {
  text-align: center;
  padding-top: 60px;
  padding-bottom: 80px;
  max-width: 1080px;
  margin: auto;
  color: var(--card);
}

.section {
  margin: 2rem 24vw 8rem 24vw;
  color: var(--card);
}

.row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}

/* Parallax scrolling */
.parallax {
  background-image: url(assets/parallax.gif);
  width: 100%;
  height: 790px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* HTML elements */
body {
  color: var(--white);
}

h1 {
  font-size: 48px;
  text-align: center;
}

h2 {
  font-size: 32px;
}

h3 {
  font-size: 24px;
}

p {
  font-size: 20px;
  font-weight: 300;
  text-align: left;
}

button {
  position: relative;
  background-color: var(--card);
  border-radius: 4px;
  border-style: none;
  box-sizing: border-box;
  font-size: 24px;
  font-weight: bold;
  color: var(--white);
  cursor: pointer;
  line-height: 20px;
  outline: none;
  padding: 1rem 2rem;
  margin-top: 2rem;
  text-align: center;
  text-decoration: none;
  transition: color 100ms;
  touch-action: manipulation;
}

